provarAnt/00D190000000ZY2EAM/objects/Case.object
<CustomObject>
    <fields>
        <fullName>ATDSA_bookshelf__Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATG_Product_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field looks up the ATG Products, not Products object</description>
        <inlineHelpText>This field is related to the ATG Products on Account page</inlineHelpText>
        <label>ATG Product Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ATG_Product__c.Dealer__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>Select &quot;All Fields&quot; radio button in order to search by Product Name.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ATG_Product__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>A_R_Reasons__c</fullName>
        <label>A/R Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Amount Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prorate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remaining Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Due Balance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_SVOC_Id__c</fullName>
        <formula>Account.SVOC_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SVOC Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actionable__c</fullName>
        <label>Actionable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actions_ATC__c</fullName>
        <formula>HYPERLINK(&quot;/apex/LogServiceActivityCaseButton?scontrolCaching=1&amp;id=&quot;&amp;Id, &quot;Log Activity&quot; ,&quot;&quot;)&amp;
&quot; | &quot;&amp;
HYPERLINK(&quot;/apex/NewCaseServiceCaseButton?scontrolCaching=1&amp;id=&quot;&amp;Id, &quot;Child Case&quot; ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adjusted_Credit_Amount__c</fullName>
        <label>Adjusted Credit Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Requested_by_DSM__c</fullName>
        <label>Amount Requested by DSM</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Detail_1__c</fullName>
        <label>Approval Detail1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approval_Detail_URL__c</fullName>
        <label>Approval Detail URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Approval_Detail__c</fullName>
        <label>Approval Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Back_To_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When Back To Contract button is pressed, set this field to true so that we can use a workflow to send an outbound message.</description>
        <label>Back To Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Back_to_Sales_Reason__c</fullName>
        <label>Back to Sales Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <formula>IF(OR(ISNULL( Account.BillingStreet ), ISNULL(Account.BillingCity), ISNULL(Account.BillingState), ISNULL(Account.BillingPostalCode)),&quot;No Value Given&quot;, &quot;STREET&quot;&amp;&quot;:&quot;&amp; Account.BillingStreet &amp;&quot; &quot;&amp; &quot;CITY&quot;&amp;&quot;:&quot;&amp; Account.BillingCity &amp;&quot; &quot;&amp; &quot;STATE&quot;&amp;&quot;:&quot;&amp; Account.BillingState &amp;&quot; &quot;&amp; &quot;ZIP&quot;&amp;&quot;:&quot;&amp; Account.BillingPostalCode)</formula>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_old__c</fullName>
        <label>Billing Address_old</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Size__c</fullName>
        <label>Business Size</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>Affiliate Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorcycles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts/Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bypass_AF__c</fullName>
        <label>Bypass AF</label>
        <picklist>
            <picklistValues>
                <fullName>Co-Op Compliance Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Graphics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rich Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Interaction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Options__c</fullName>
        <label>Cancellation Options</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation/Billing Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending w/Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved/Rescinded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Status__c</fullName>
        <label>Cancellation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Cancellation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Age_Business_days__c</fullName>
        <description>Haystak</description>
        <formula>IF( IsClosed = false, 
CASE(MOD( DATEVALUE(CreatedDate) - DATE(1985,6,24),7), 

 0 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 

 1 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 

 2 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 

 3 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 

 4 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 

 5 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 

 6 , CASE( MOD( TODAY() - DATEVALUE(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 

 999) 

 + 

 (FLOOR(( TODAY() - DATEVALUE(CreatedDate) )/7)*5)
 , Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age (Business days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age_days__c</fullName>
        <formula>IF( IsClosed = false, Today()- DATEVALUE(CreatedDate) , Null)</formula>
        <inlineHelpText>if the case is open this formula field calculates the # of days a case has been open - DOES NOT TAKE IN CONSIDERATION BUSINESS DAYS</inlineHelpText>
        <label>Case Age (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Final_Owner__c</fullName>
        <description>Read-only field populated by workflow that indicates who the owner of the case was at the time of case closure (FIRST case closure only).</description>
        <label>Case Final Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Original_Owner__c</fullName>
        <description>Read-only field that holds the original owner of the case at the time of case creation.</description>
        <label>Case Original Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Worker_Id__c</fullName>
        <description>This is the worker id of the case owner added for medallia integration.</description>
        <formula>Owner:User.Worker_ID__c</formula>
        <label>Case Worker Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Cancellation_Reason__c</fullName>
        <label>Confirmed Cancellation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>AT.Com Initiated - Fraudulent Corporate Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT.Com Initiated – Contract Cannot Stand Alone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT.Com Initiated - Non-payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT.Com Initiated - Non –Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT.Com Initiated - Non Ownership Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT.Com Initiated -Switch Product Packages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT.Com Initiated - Unauthorized Signatures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated - Economic Hardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated - Ford Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated – Inventory Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated  - Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated – Ownership Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated – Price &amp; Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated – Refuse to provide a Reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated – Satisfaction of (Product)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated – Satisfaction of (Sales &amp; Service)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Initiated – Unauthorized Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Delivery – Order Entry Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Delivery – Sales Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Delivery - System Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Delivery - Co Management Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Delivery - Haystack Initiated switch Product/Packages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Delivery -  Co Management Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Delivery - Sales Management Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Delivery – Credit Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-delivery - Inventory Problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Delivery – Ford Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Delivery – No Collateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Delivery – Order Entry Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Delivery – Sales Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Forms_Addendums__c</fullName>
        <label>Contract Forms &amp; Addendums</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Hold_Package_Name__c</fullName>
        <label>Contract Hold Package Name</label>
        <picklist>
            <controllingField>Contract_Placed_on_Hold__c</controllingField>
            <picklistValues>
                <fullName>Alpha 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Core 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Dealership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Full Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT/KBB Special Bundles 2015 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW Cert Pre-Owned Featured Max 2012  2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW Cert Pre-Owned Premium Max 2012  3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW Cert Pre-Owned Premium Plus 2012  4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW KBB New Car Fusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW KBB New Car Fusion (Standalone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connections Bundle Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connections Bundle Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom URL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Builder Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FastAds Vehicle Video Gold 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FastAds Vehicle Video Intro 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FastAds Vehicle Video Outro 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FastAds Vehicle Video Platinum 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FastAds Website Distribution 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Core 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Max 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Plus 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Alpha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Alpha 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Alpha Core 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Alpha Full Rate</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contract_Hold_Reason__c</fullName>
        <label>Contract Hold Reason</label>
        <picklist>
            <controllingField>Contract_Placed_on_Hold__c</controllingField>
            <picklistValues>
                <fullName>Co-op Missing Advertising Make</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-op Missing Flag Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing AC signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Dealer Contact Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing DMA Zone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing DSM/RD Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Frontline Pro Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Inventory Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing XML/test email address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Bill-To Id, Invoice Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Bill-Address for 3rd Pty Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Dealer Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <formula>Contract__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Placed_on_Hold__c</fullName>
        <label>Contract Placed on Hold</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Rejected__c</fullName>
        <label>Contract Rejected</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Rejection_Comments__c</fullName>
        <description>Populate values entered in the new “Contract Rejection Comments” field in the comments section of the auto-generated task. Update CaseHandlerController.</description>
        <label>Contract Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Rejection_Package_Name__c</fullName>
        <label>Contract Rejection Package Name</label>
        <picklist>
            <controllingField>Contract_Rejected__c</controllingField>
            <picklistValues>
                <fullName>Alpha 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Core 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Dealership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Full Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT/KBB Special Bundles 2015 </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW Cert Pre-Owned Featured Max 2012  2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW Cert Pre-Owned Premium Max 2012  3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW Cert Pre-Owned Premium Plus 2012  4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW KBB New Car Fusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW KBB New Car Fusion (Standalone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connections Bundle Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connections Bundle Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom URL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Builder Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FastAds Vehicle Video Gold 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FastAds Vehicle Video Intro 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FastAds Vehicle Video Outro 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FastAds Vehicle Video Platinum 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FastAds Website Distribution 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Core 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Max 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured Plus 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Alpha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Alpha 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Alpha Core 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Alpha Full Rate</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contract_Rejection_Reason__c</fullName>
        <label>Contract Rejection Reason</label>
        <picklist>
            <controllingField>Contract_Rejected__c</controllingField>
            <picklistValues>
                <fullName>2014 Alpha SO is Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 New Car SO is Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account in RD/Hibernation Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Full Rate Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha SO Missing 3 Dealer Initials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altered ARA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC Contract Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Cannot be Co-op</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Readability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-op Missing Advertising Make</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-op Missing Flag Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealerID/Bill-To ID Cannot be Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax Transmission Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford Make Cannot be Co-op</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Number of Slots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Total/Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Total Multipackage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Per Make Exceeds Lot Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB Classified Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB New Car Fusion Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LotSize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing AC signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing ARA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing BAC/Dealer Code and/or Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Bill-Address for 3rd Pty Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Bill-To Id, Invoice Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Dealer Contact Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Dealer Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing DMA Zone</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contract_Type_Formula__c</fullName>
        <formula>Contract__r.ATC_Contract_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases (Contract)</relationshipLabel>
        <relationshipName>Cases_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Accept_Reject__c</fullName>
        <label>Credit Accept/Reject</label>
        <picklist>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Date__c</fullName>
        <label>Credit Date</label>
        <type>Date</type>
    </fields>
</CustomObject>